--- a/Simplenote/src/main/res/values/strings.xml
+++ b/Simplenote/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name" translatable="false">Simplenote</string>
+    <string name="app_name">Smart Note</string>
     <string name="app_launcher_name" translatable="false">@string/app_name</string>
     <string name="tag_hint">Add tag…</string>
     <string name="settings">Settings</string>
