--- a/Simplenote/src/main/res/values/strings.xml
+++ b/Simplenote/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Smart Note</string>
-    <string name="app_launcher_name" translatable="false">@string/app_name</string>
+    <string name="app_launcher_name">@string/app_name</string>
     <string name="tag_hint">Add tag…</string>
     <string name="settings">Settings</string>
     <string name="share">Share</string>
